--- a/style.css
+++ b/style.css
@@ -23,6 +23,13 @@ body{
   background-color: #DCEDC2;
 }
 
+.main{
+  max-width: 960px;
+  margin: 0 auto;
+  padding:10px;
+  width: 100%;
+}
+
 .menu{
   position: relative;
   width: 100%;
