--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ body{
   max-width: 960px;
   margin: 0 auto;
   padding:10px;
-  width: 100%;
 }
 
 .menu{
@@ -55,8 +54,8 @@ body{
 }
 
 .hiper_links_section{
+  border-radius: 10px;
   margin-top: 50px;
-  position: relative;
   background-color: #FFD3B5;
 }
 
@@ -66,9 +65,6 @@ body{
 
 .hiper_links_body{
   font-family: 'Courier New', Courier, monospace;
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
 }
 
 .hiper_links_body ul{
@@ -80,14 +76,14 @@ body{
 }
 
 .table_section{
+  border-radius: 10px;
   margin-top: 50px;
-  position: relative;
   background-color: #FFD3B5;
 }
 
 .form_section{
+  border-radius: 10px;
   margin-top: 50px;
-  position: relative;
   background-color: #FFD3B5;
 }
 
@@ -99,11 +95,6 @@ body{
 .footer{
   background-color: #FF8C94;
   margin-top: 20px;
-}
-
-.main{
-  display: flex;
-  flex-direction: column;
 }
 
 .form-group input{
